@@ -86,7 +86,7 @@ public:
     // Typically the CachedImage that owns us.
     ImageAnimationObserver* animationObserver() const { return m_animationObserver; }
 
-    enum TileRule { StretchTile, RoundTile, RepeatTile };
+    enum TileRule { StretchTile, RepeatTile };
     
 #if PLATFORM(MAC)
     // Accessors for native image formats.
