@@ -1,3 +1,15 @@
+2007-01-16  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by mitz.
+
+        Refactor drawTiled implementations in preparation for combining them.
+        Removed unused RoundTile code path.
+
+        * platform/graphics/cg/ImageCG.cpp:
+        (WebCore::drawPattern):
+        (WebCore::BitmapImage::drawTiled):
+        (WebCore::caculatePatternScale):
+
 2007-01-16  Darin Adler  <darin@apple.com>
 
         Reviewed by Mark Rowe.
